views with basic html and controllers created

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#home</h1>
+<h1>Cyber Empire - les pronos</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+<div> <%= link_to "matches", matches_path  %> </div>
+<div> <%= link_to "championships", championships_path  %> </div>
+<div> <%= link_to "teams", teams_path  %> </div>
