add model + view + controller + migration + tests api"

--- a/app/views/championships/index.html.erb
+++ b/app/views/championships/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Cyber Empire - les championships</h1>
 
+<h4>total : <%= @championships.count  %> lignes</h4>
+
 
 <ul>
   <% @championships.each do |championship| %>
