--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,3 +4,4 @@
 <div> <%= link_to "matches", matches_path  %> </div>
 <div> <%= link_to "championships", championships_path  %> </div>
 <div> <%= link_to "teams", teams_path  %> </div>
+<div> <%= link_to "pronostics", pronostics_path  %> </div>
