add view + controller and change model pronostic"

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,3 +5,4 @@
 <div> <%= link_to "championships", championships_path  %> </div>
 <div> <%= link_to "teams", teams_path  %> </div>
 <div> <%= link_to "pronostics", pronostics_path  %> </div>
+<div> <%= link_to "recommendations", recommendations_path  %> </div>
