--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -1,3 +1,8 @@
+<%= form_with url: recommendations_path, method: :get, local: true do |f| %>
+  <%= f.date_field :date, value: params[:date] || Date.today %>
+  <%= f.submit "selectionner" %>
+<% end %>
+
 
 <div class="headers">
   <span class="date center">
